--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -91,8 +91,8 @@
 
             });
         }
-        function switchLang(bool) {
-            if (bool == true) {
+        function switchLang(swahili) {
+            if (swahili == true) {
                 $('.CovidUpdates > li:nth-child(1) .cuLabel').html("JUMLA YA WAGONJWA:");
                 $('.CovidUpdates > li:nth-child(2) .cuLabel').html("WALIOKUFA:");
                 $('.CovidUpdates > li:nth-child(3) .cuLabel').html("WALIOPONA:");
