--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,4 +33,6 @@ $('.scrollbutton').click(function () {
 });
 });
 </script>
-<div class="page__footer-copyright">&copy; COVID-19 Updates. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://twitter.com/intent/user?screen_name=thedextazlab" rel="nofollow">@thedextazlab</a></div>
+<div class="page__footer-copyright">&copy; COVID-19 Updates. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="https://twitter.com/intent/user?screen_name=thedextazlab" rel="nofollow">@thedextazlab</a>
+<br><a href="/terms/">Terms of Service</a>&nbsp;|&nbsp;<a href="/terms/#privacy-policy">Privacy Policy</a>
+</div>
