--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -26,3 +26,15 @@
     <script src="{{ script | relative_url }}?v={{ site.build }}"></script>
   {% endfor %}
 {% endif %}
+
+<script>
+  if ('serviceWorker' in navigator) {
+     console.log("Will the service worker register?");
+     navigator.serviceWorker.register('service-worker.js')
+       .then(function(reg){
+         console.log("Yes, it did.");
+      }).catch(function(err) {
+         console.log("No it didn't. This happened:", err)
+     });
+  }
+ </script>
