--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 
 <!-- https://t.co/dKP3o1e -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="theme-color" content="#222"/>
 <link rel="manifest" href="/manifest.json">
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
@@ -36,3 +37,14 @@
     <script src="{{ script | relative_url }}?v={{ site.build }}"></script>
   {% endfor %}
 {% endif %}
+<script type="text/javascript" data-cfasync="false"> 
+  var _foxpush = _foxpush || []; 
+  _foxpush.push(['_setDomain', 'covid19amshaio']); 
+  (function(){ 
+  var foxscript = document.createElement('script'); 
+  foxscript.src = '//cdn.foxpush.net/sdk/foxpush_SDK_min.js'; 
+  foxscript.type = 'text/javascript'; 
+  foxscript.async = 'true'; 
+  var fox_s = document.getElementsByTagName('script')[0]; 
+  fox_s.parentNode.insertBefore(foxscript, fox_s);})(); 
+  </script>
