--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -16,8 +16,7 @@
     <div class="initial-content">
     <div id="main" role="main" class="">
     <updates>
-    <h1><span class="covid-alert">🔔</span>&nbsp;
-        <span class="cuTitle">COVID-19 Updates</span>
+    <h1><span class="cuTitle">COVID-19 Updates</span>
         <span class="refresher">
         <i class="fa-stack fa-2x">
         <i class="fas fa-circle fa-stack-2x"></i>
