--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -95,27 +95,16 @@ updates subtitle {
     padding-top: 8px;
 }
 .emoji {
-    line-height: 1;
-    border: 3px solid #fff;
-    left: -52px;
-    position: relative;
-    box-shadow: 0 0 8px rgba(0,0,0,.15);
-    text-indent: 0;
-    font-size: 1em;
-    height: 40px;
-    border-radius: 50px;
-    background: #fff;
     text-align: center;
-    padding: 4px 0;
+    text-indent: 0;
+    display: inline-block;
     width: 40px;
-    display: block;
-    margin-bottom: -40px;
-    @include breakpoint($mobile-max) {
-        font-size:1.4em;
-      }
+    margin-right: 8px;
 }
 .h-indent {
-    padding-left: 56px;
+    text-indent: -50px;
+    margin-top: 1.3em;
+    padding-left: 44px;
 }
 .no-indent {
     margin-left: 0;
