--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,6 +37,9 @@
     <script src="{{ script | relative_url }}?v={{ site.build }}"></script>
   {% endfor %}
 {% endif %}
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js" integrity="sha256-oE03O+I6Pzff4fiMqwEGHbdfcW7a3GRRxlL+U49L5sA=" crossorigin="anonymous"></script>
+
 <script type="text/javascript" data-cfasync="false"> 
   var _foxpush = _foxpush || []; 
   _foxpush.push(['_setDomain', 'covid19amshaio']); 
