--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -29,6 +29,8 @@
         <li><span class="cuLabel">Dead: </span><span class="cuDead"></span></li>
         <li><span class="cuLabel">Recovered: </span><span class="cuRecovered"></span></li>
     </ul>
+    <note class="english"><strong>NOTE:</strong>These are totals of all COVID-19 cases globally</note>
+    <note class="swahili"><strong>NOTE:</strong>Hii ni jumla ya wagonjwa wote wa COVID-19 duniani</note>
     </updates>
     <div class="loader">FETCHING DATA &nbsp; <i class="fas fa-cog fa-spin"></i></div>
     <div class="toggleLang"><span class="lang">KISWAHILI</span></div>
@@ -105,16 +107,22 @@
         }
         $(document).ready(function(){
             fetchDATA();
+            if(Cookies.get('site_lang') == "swahili") {
+                switchLang(true);
+            }
+            $('.cuInstructions').fadeIn();
             $('.lang').click(function(){
                 if($('.lang').html() == "KISWAHILI"){
                     $('.swahili').show();
                     $('.english').hide();
                     $('.lang').html("ENGLISH");
+                    Cookies.set('site_lang', 'swahili', { expires: 365 });
                     switchLang(true);
                 } else {
                     $('.swahili').hide();
                     $('.english').show();
                     $('.lang').html("KISWAHILI");
+                    Cookies.set('site_lang', 'english', { expires: 365 });
                     switchLang(false);                   
                 }
 
