--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -159,6 +159,7 @@ updates subtitle {
 }
 .swahili {display:none;}
 .toggles {
+    box-shadow: 0 1px 2px rgba(0,0,0,.25) inset;
     display: flex;
     border-radius: 28px;
     padding: 4px 0px 4px 12px;
@@ -166,14 +167,21 @@ updates subtitle {
     float: right;
 }
 .lang {
+    margin-left: -8px;
+    height: 36px;
+    overflow: hidden;
+    border: 2px solid;
+    border-radius: 50px;
+    width: 36px;
     vertical-align: top;
     display: grid;
-    padding: 4px 4px 2px 4px;
     text-align: center;
-    font-size: .5em;
-    color: #fff;
     cursor: pointer;
     font-weight: normal;
+    @include breakpoint($mobile-max) {
+        width: 26px;
+        height: 26px;
+      }
 }
 .refresher {
     cursor: pointer;
