--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -38,3 +38,14 @@
      });
   }
  </script>
+ <script type="text/javascript" data-cfasync="false"> 
+    var _foxpush = _foxpush || []; 
+    _foxpush.push(['_setDomain', 'covid19amshaio']); 
+    (function(){ 
+    var foxscript = document.createElement('script'); 
+    foxscript.src = '//cdn.foxpush.net/sdk/foxpush_SDK_min.js'; 
+    foxscript.type = 'text/javascript'; 
+    foxscript.async = 'true'; 
+    var fox_s = document.getElementsByTagName('script')[0]; 
+    fox_s.parentNode.insertBefore(foxscript, fox_s);})(); 
+  </script>
