--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -152,6 +152,19 @@ updates subtitle {
 .greedy-nav {background: transparent!important}
 .masthead {
     background: #000;
+    @include breakpoint($mobile-max) {
+            top: 0;
+            box-shadow: 0 0 12px rgba(0,0,0,.5);
+            border-bottom: 0;
+            width: 100%;
+            margin-bottom: 40px;
+            position: fixed;
+      }
+}
+body {
+    @include breakpoint($mobile-max) {
+            margin-top: 64px;
+    } 
 }
 
 .cuInstructions p {
