--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
     }
 $(document).ready(function() {
 
-  $('.greedy-nav .visible-links').addClass('.nav-fadeIn');
+  $('.greedy-nav .visible-links').addClass('nav-fadeIn');
 
   $(window).scroll(function (){
     if ($(this).scrollTop()) {
