--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -152,6 +152,7 @@ updates subtitle {
 .greedy-nav {background: transparent!important}
 .masthead {
     background: #000;
+    border-bottom:0;
     @include breakpoint($mobile-max) {
             top: 0;
             box-shadow: 0 0 12px rgba(0,0,0,.5);
@@ -204,7 +205,7 @@ body {
     margin-left: -8px;
     height: 36px;
     overflow: hidden;
-    border: 2px solid;
+    border: 2px solid #222;
     border-radius: 50px;
     width: 36px;
     vertical-align: top;
@@ -217,11 +218,12 @@ body {
         height: 26px;
       }
 }
-.refresher {
+.refresher, .darkswitch {
+    color: #222;
     cursor: pointer;
     font-size: .25em;
 }
-    .refresher:hover {
+    .refresher:hover, .darkswitch:hover {
         color: #777;
 }
 
@@ -235,9 +237,14 @@ body {
     width: 100%;
 }
 updates note {
-    color: #555;
+    opacity:0.75;
     font-size: 12px;
     text-align: center;
     padding-top: 8px;
     display: block;
+}
+
+.darkmode {
+    background: #000;
+    color: #fff;
 }
