--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -202,7 +202,6 @@ body {
     float: right;
 }
 .lang {
-    margin-left: -8px;
     height: 36px;
     overflow: hidden;
     border: 2px solid #222;
@@ -217,6 +216,9 @@ body {
         width: 26px;
         height: 26px;
       }
+}
+.darkswitch {
+    margin-left: -11px;
 }
 .refresher, .darkswitch {
     color: #222;
