--- a/_sass/minimal-mistakes/_custom.scss
+++ b/_sass/minimal-mistakes/_custom.scss
@@ -255,3 +255,6 @@ updates note {
 body, #footer {
     transition: background 0.25s ease-in-out, color 0.25s ease-in-out;
 }
+.flag-icon-background {
+    box-shadow: 0 0 12px rgba(0,0,0,.5) inset;
+}
