--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -173,6 +173,7 @@
                     Cookies.set('darkmode', 'false', { expires: 365 });
                 }
             });
+            $('body, #footer').css({"transition":"background 0.25s ease-in-out, color 0.25s ease-in-out"});
         });
     </script>
     {% include scripts.html %}
