--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -10,10 +10,9 @@
   <script>
       if(Cookies.get('darkmode') == "true") {
                     $('.darkswitch-toggle').removeClass("fa-moon").addClass("fa-sun");
-                    $('body, #footer').addClass("darkmode");
+                    $('body, #footer').addClass("darkmode-pre");
             } else {
                     $('.darkswitch-toggle').removeClass("fa-sun").addClass("fa-moon");
-                    $('body, #footer').removeClass("darkmode");
         }
   </script>
   </head>
