--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -10,7 +10,7 @@
   <script>
       if(Cookies.get('darkmode') == "true") {
                     $('.darkswitch-toggle').removeClass("fa-moon").addClass("fa-sun");
-                    $('body, #footer').addClass("darkmode-pre");
+                    $('body, #footer').addClass("darkmode");
             } else {
                     $('.darkswitch-toggle').removeClass("fa-sun").addClass("fa-moon");
         }
