--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -38,14 +38,20 @@
      });
   }
  </script>
- <script type="text/javascript" data-cfasync="false"> 
-    var _foxpush = _foxpush || []; 
-    _foxpush.push(['_setDomain', 'covid19amshaio']); 
-    (function(){ 
-    var foxscript = document.createElement('script'); 
-    foxscript.src = '//cdn.foxpush.net/sdk/foxpush_SDK_min.js'; 
-    foxscript.type = 'text/javascript'; 
-    foxscript.async = 'true'; 
-    var fox_s = document.getElementsByTagName('script')[0]; 
-    fox_s.parentNode.insertBefore(foxscript, fox_s);})(); 
-  </script>
+ 
+ <!-- Begin DigitalPUSH code -->
+<script>
+  var DGPkey = "TnpQd0xCWUtENDRKR3A3cWw5VVQ2SUMrZkdNMDZUODlIcEQ1UFhXbHl6ST0="; //mandatory
+  var DGPnativerequest = "0";
+  var DGPdelay = "0";
+  var DGPmtype = "overlay";
+  var DGPtheme = "616161";
+  var DGPtitle = "Don't miss it!";
+  var DGPmessage = "Allow notifications to receive COVID-19 updates";
+  var DGPallowbutton = "ALLOW";
+  var DGPrejectbutton = "No thanks";
+  var DGPinpageads = "1";
+</script>
+<script type="text/javascript" src="//cdn.digitalpush.org/lib.js"></script>
+  <!-- End DigitalPUSH code -->
+
