--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -52,6 +52,6 @@
   var DGPrejectbutton = "No thanks";
   var DGPinpageads = "1";
 </script>
-<script type="text/javascript" src="//cdn.digitalpush.org/lib.js"></script>
+<script type="text/javascript" src="/assets/js/dp.js"></script>
   <!-- End DigitalPUSH code -->
 
