--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -28,7 +28,7 @@
 {% endif %}
 
 <script>
-  if ('serviceWorker' in navigator) {
+  /*if ('serviceWorker' in navigator) {
      console.log("Will the service worker register?");
      navigator.serviceWorker.register('/service-worker.js')
        .then(function(reg){
@@ -36,7 +36,7 @@
       }).catch(function(err) {
          console.log("No it didn't. This happened:", err)
      });
-  }
+  }*/
  </script>
  
  <!-- Begin DigitalPUSH code -->
