--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -49,5 +49,5 @@
   var DGPrejectbutton = "No thanks";
   var DGPinpageads = "0";
   </script>
-  <script type="text/javascript" src="/dgp-js.js"></script>
+  <script type="text/javascript" src="/dgp-js.js?v={{ site.build }}"></script>
   <!-- End DigitalPUSH code -->
