--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -62,7 +62,7 @@
     <h3 class="h-indent swahili"><span class="emoji">👄</span>Usishike macho, mdomo na pua</h3>
     <p class="swahili"></p>
     <h3 class="h-indent english"><span class="emoji">💪</span>Cover your mouth and nose with your bent elbow or tissue when you cough or sneeze</h3>
-    <h3 class="h-indent swahili"><span class="emoji">💪</span>Ziba mdomo wako na pua kwa mkono uliokunjwa au tishu unapokohoa au kupiga chafya</h3>
+    <h3 class="h-indent swahili"><span class="emoji">💪</span>Funika mdomo wako na pua kwa kuzuia kwenye mkunjo wa wa ndani wa kiwiko chako au kwa kutumia tishu kila unapokohoa au kupiga chafya</h3>
     <p class="swahili"></p>
     <h3 class="h-indent english"><span class="emoji">🚷</span>Avoid crowded places</h3>
     <h3 class="h-indent swahili"><span class="emoji">🚷</span>Kaa mbali na sehemu zenye mikusanyiko</h3>
