--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 <!-- https://t.co/dKP3o1e -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="theme-color" content="#000"/>
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="/manifest.json?v={{ site.build }}">
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
