--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,6 +5,7 @@
 {% else %}
   <script src="{{ '/assets/js/main.min.js' | relative_url }}?v={{ site.build }}"></script>
   <script src="https://kit.fontawesome.com/4eee35f757.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/jquery.dataTables.min.js" integrity="sha256-L4cf7m/cgC51e7BFPxQcKZcXryzSju7VYBKJLOKPHvQ=" crossorigin="anonymous"></script>
 {% endif %}
 
 {% if site.search == true or page.layout == "search" %}
