--- a/_layouts/covid19.html
+++ b/_layouts/covid19.html
@@ -95,6 +95,20 @@
                     <th>Total Deaths/<br>1M pop</th>
                 </tr>
             </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
             <tfoot>
                 <tr>
                     <th>Country,<br>Other</th>
